# MoodCanvas

./: .gitignore  README.md  app.py  config.json  env.example  main.py  pyproject.toml  run.py  struct.md  test.py
backend/: main.py
backend/api/: image.py
config/: config.json  settings.py
data/models/emotion2vec_plus_large/: .mdl
data/models/models/iic/emotion2vec_plus_large/: .mdl  .msc
data/models/models/iic/speech_seaco_paraformer_large_asr_nat-zh-cn-16k-common-vocab8404-pytorch/: .msc
data/models/paraformer-zh/: .mdl
data/temp/1best_recog/: text  token
docs/: api.md  deployment.md  development.md
moodcanvas/: config.json  config_manager.py  image_edit_i2i.py  text2image_t2i.py
scripts/: run_tests.py  setup_env.py  start_server.py  test_api.py
src/: __init__.py  main.py
src/api/: dependencies.py
src/api/v1/: emotion.py  health.py  image.py
src/core/: config_manager.py  exceptions.py
src/data/models/distilbert-base-uncased-go-emotions-student/: config.json  tokenizer_config.json
src/data/models/paraformer-zh/: README.md
src/frontend/app/: app.json  project.config.json
src/frontend/app/src/pages/index/: index.js  (+3 more)
src/models/: __init__.py
src/models/asr/: __init__.py  base.py  paraformer.py
src/models/emotion/: __init__.py  audio_emotion.py  base.py  text_emotion.py
src/models/image/: __init__.py  base.py  image2image.py  text2image.py
src/services/: emotion_analyzer.py  image_service.py  text_generator.py
src/utils/: audio_utils.py  file_utils.py  image_utils.py  response_utils.py
tests/: README.md  README_API_TESTS.md  conftest.py  run_api_tests.py  test_api.py  test_config.py  test_env_loading.py  test_exceptions.py  test_integration_api.py  test_large_model_api.py  test_models.py  test_services.py  test_utils.py
tests/api/: test_api.py
tests/services/: test_services.py
(+15 files in other folders)
