[project]
name = "moodcanvas"
version = "2.0.0"
description = "三阶段多模型情感分析系统"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "funasr>=0.10.0",
    "modelscope>=1.9.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # 这些依赖在代码中被使用但未声明
    "volcenginesdkarkruntime",  # 豆包API
    "requests",                  # HTTP请求
    "pydantic"                  # 数据验证
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*",
    "config/**/*",
    "data/**/*",
    "scripts/**/*",
    "docs/**/*"
]
