[project]
name = "moodcanvas"
version = "2.0.0"
description = "三阶段多模型情感分析系统"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "funasr>=0.10.0",
    "modelscope>=1.9.0",
    "pillow>=10.0.0",    
    "numpy>=1.24.0",
    "scipy>=1.11.1,<1.14",                # 避开被 yanked 的 1.11.0，且不强制 Py>=3.10
    "umap-learn>=0.5.7",                  # 给出较新的 umap
    "pynndescent>=0.5.11",                # 让它依赖到新 numba
    "numba>=0.59.0",                      # Py3.12 支持自 0.59 起
    "llvmlite>=0.42.0"    
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*",
    "config/**/*",
    "data/**/*",
    "scripts/**/*",
    "docs/**/*"
]
